--- a/src/LoginForm.scss
+++ b/src/LoginForm.scss
@@ -22,4 +22,13 @@
     color: #fff;
     font-weight: bold;
   }
+
+  &__error {
+    border: 1px solid red;
+    background: #f5dade;
+    padding: 5px;
+    box-sizing: border-box;
+    font-weight: bold;
+    color: #606060;
+  }
 }
