--- a/src/SearchItem.scss
+++ b/src/SearchItem.scss
@@ -1,7 +1,8 @@
 .search-item {
   list-style: none;
   padding: 0;
-  margin: 0;
+  margin: 0 0 16px;
+  display: flex;
 
 
   &__link:link {
@@ -10,17 +11,9 @@
 
   &__image {
     margin-right: 8px;
-    display: flex;
-    flex-direction: column;
-    flex-basis: 100%;
-    flex: 1;
   }
 
   &__title {
     vertical-align: top;
-    display: flex;
-    flex-direction: column;
-    flex-basis: 100%;
-    flex: 1;
   }
 }
